chore: add flow replaced error
