# internal/httpclient/api/openapi.yaml
@@ -3955,6 +3955,64 @@ components:
       required:
       - message
       type: object
+    selfServiceFlowReplacedError:
+      description: Is sent when a flow is replaced by a different flow of the same
+        class
+      properties:
+        code:
+          description: The status code
+          example: 404
+          format: int64
+          type: integer
+        debug:
+          description: |-
+            Debug information
+
+            This field is often not exposed to protect against leaking
+            sensitive information.
+          example: SQL field "foo" is not a bool.
+          type: string
+        details:
+          additionalProperties: {}
+          description: Further error details
+          type: object
+        id:
+          description: |-
+            The error ID
+
+            Useful when trying to identify various errors in application logic.
+          type: string
+        message:
+          description: |-
+            Error message
+
+            The error's message.
+          example: The resource could not be found
+          type: string
+        reason:
+          description: A human-readable reason for the error
+          example: User with ID 1234 does not exist.
+          type: string
+        request:
+          description: |-
+            The request ID
+
+            The request ID is often exposed internally in order to trace
+            errors across service architectures. This is often a UUID.
+          example: d7ef54b1-ec15-46e6-bccb-524b82c035e6
+          type: string
+        status:
+          description: The status description
+          example: Not Found
+          type: string
+        use_flow_id:
+          description: The flow ID that should be used for the new flow as it contains
+            the correct messages.
+          format: uuid
+          type: string
+      required:
+      - message
+      type: object
     selfServiceFlowType:
       description: The flow type can either be `api` or `browser`.
       title: Type is the flow type.
